fix wrapping on user menu

--- a/app/javascript/molecules/user_menu/index.scss
+++ b/app/javascript/molecules/user_menu/index.scss
@@ -9,8 +9,10 @@
     .button__text {
       display: none;
 
-      @include media(small) {
+      @include media(medium) {
+        @include ellipsis;
         display: initial;
+        max-width: 16rem;
       }
     }
   }
